--- a/services/pom.xml
+++ b/services/pom.xml
@@ -9,5 +9,15 @@
 
 	<artifactId>services</artifactId>
 
+		<dependencies>
+
+			<dependency>
+				<groupId>by.dk.training.items</groupId>
+				<artifactId>dataccess</artifactId>
+				<version>1.0.0.0</version>
+			</dependency>
+
+		</dependencies>
+
 
 </project>
