--- a/dataaccess/pom.xml
+++ b/dataaccess/pom.xml
@@ -7,17 +7,20 @@
 		<version>1.0.0</version>
 	</parent>
 
-	<artifactId>services</artifactId>
+	<artifactId>dataaccess</artifactId>
+	<version>1.0.0.0</version>
 
+	<dependencyManagement>
 		<dependencies>
 
 			<dependency>
 				<groupId>by.dk.training.items</groupId>
-				<artifactId>dataccess</artifactId>
-				<version>1.0.0.0</version>
+				<artifactId>datamodel</artifactId>
 			</dependency>
 
 		</dependencies>
+	</dependencyManagement>
+
 
 
 </project>
