--- a/service/pom.xml
+++ b/service/pom.xml
@@ -7,20 +7,17 @@
 		<version>1.0.0</version>
 	</parent>
 
-	<artifactId>dataccess</artifactId>
-	<version>1.0.0.0</version>
+	<artifactId>services</artifactId>
 
-	<dependencyManagement>
 		<dependencies>
 
 			<dependency>
 				<groupId>by.dk.training.items</groupId>
-				<artifactId>datamodel</artifactId>
+				<artifactId>dataaccess</artifactId>
+				<version>1.0.0.0</version>
 			</dependency>
 
 		</dependencies>
-	</dependencyManagement>
-
 
 
 </project>
