--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>by.dk.training.items</groupId>
 		<artifactId>parent-project</artifactId>
@@ -9,15 +10,28 @@
 
 	<artifactId>services</artifactId>
 
-		<dependencies>
-
-			<dependency>
-				<groupId>by.dk.training.items</groupId>
-				<artifactId>dataaccess</artifactId>
-				<version>1.0.0.0</version>
-			</dependency>
-
-		</dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>by.dk.training.items</groupId>
+			<artifactId>dataaccess</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+	</dependencies>
 
 
 </project>
